--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,7 +21,7 @@ $georgia: Georgia, serif;
 
 // Fonts
 $base-font: 'Arial', 'Spoqa Han Sans', 'Source Sans Pro', 'Apple SD Gothic Neo', 'Nanum Barun Gothic', 'Nanum Gothic', 'Verdana', 'Dotum', sans-serif;
-$code-font: 'Menlo', 'Courier New', 'Monaco', 'Spoqa Han Sans', monospace;
+$code-font: 'JetBrains Mono', 'Menlo', 'Courier New', 'Monaco', 'Spoqa Han Sans';
 
 // Font sizes
 $base-font-size: 17px;
