--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,21 @@
 <html>
   {% include head.html %}
   <body>
+    <script>
+      window.MathJax = {
+        tex: {
+        inlineMath: [['$', '$'], ['\\(', '\\)']]
+        },
+        skipHtmlTags: [
+          'script', 'noscript', 'style', 'textarea', 'pre'
+        ],
+      };
+    </script>
+    <script type="text/javascript" id="MathJax-script" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+    </script>
+
+
     {% include nav.html %}
 
     <div id="main" role="main" class="container">
