--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,7 @@
     <script>
       window.MathJax = {
         tex: {
-        inlineMath: [['$', '$'], ['\\(', '\\)']],
-        displayMath: [ ['$$','$$'] ]
+        inlineMath: [['$', '$'], ['\\(', '\\)']]
         },
         skipHtmlTags: [
           'script', 'noscript', 'style', 'textarea', 'pre'
