--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   {% include head.html %}
   <body>
-    <!--config MathJax-->>
+    <!--config MathJax-->
     <script>
       window.MathJax = {
         tex: {
