--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,9 @@
       };
     </script>
 
-    <!-- <script id="MathJax-script" async
+    <script type="text/javascript" id="MathJax-script" async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-    </script> -->
-
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    </script>
 
 
     {% include nav.html %}
