--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 1000px;    // tăng độ rộng của bài viết
   padding: 0 10px;
   width: 100%;
 }
