--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
+  <head> 
+    <link rel="icon" type="image/png" href="../images/404.jpg">
+  </head>
   <body>
     <!--config MathJax-->
     <script>
