--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
+  <!-- Phần head section mình thêm vào để set icon cho browser tab-->
   <head> 
     <link rel="icon" type="image/png" href="../images/404.jpg">
   </head>
