--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!--config MathJax-->
-    <!-- <script>
+    <script>
       window.MathJax = {
         tex: {
         inlineMath: [['$', '$'], ['\\(', '\\)']]
@@ -20,10 +20,7 @@
 
     <script type="text/javascript" id="MathJax-script" async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-    </script> -->
-
-    <script src=”https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id=”MathJax-script” async src=”https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    </script>
 
 
     {% include nav.html %}
