chinh sua mathjax

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,8 @@
     <script>
       window.MathJax = {
         tex: {
-        inlineMath: [['$', '$'], ['\\(', '\\)']]
+        inlineMath: [['$', '$']],
+        displayMath: [['$$', '$$']]
         },
         skipHtmlTags: [
           'script', 'noscript', 'style', 'textarea', 'pre'
