chinh sua mathjax

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
     <script>
       window.MathJax = {
         tex: {
-        inlineMath: [['$', '$']],
-        displayMath: [['$$', '$$']]
+        inlineMath: [['$', '$'], ['\\(', '\\)']]
         },
         skipHtmlTags: [
           'script', 'noscript', 'style', 'textarea', 'pre'
