--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 
   <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML">
+  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML">
     MathJax.Hub.Config({
       "HTML-CSS": {
         availableFonts: ["TeX"],
@@ -32,6 +32,6 @@
       imageFont: null,
       "AssistiveMML": { disabled: true }
     });
-  </script>
+  </script> -->
 
 </head>
