cross entropy, backpropogation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     
+
+    <!-- mathjax -->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/x-mathjax-config">
+      // Make responsive
+      MathJax.Hub.Config({
+      "HTML-CSS": { linebreaks: { automatic: true } },
+      "SVG": { linebreaks: { automatic: true } },
+      });
+    </script>
+<!-- 
     <!--config MathJax-->
     <script>
       window.MathJax = {
@@ -21,7 +32,7 @@
 
     <script type="text/javascript" id="MathJax-script" async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-    </script>
+    </script> -->
 
     
 
