--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <body>
     
 
-    <!-- mathjax -->
+    <!-- mathjax
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config">
       // Make responsive
@@ -19,7 +19,7 @@
     </script>
 <!-- 
     <!--config MathJax-->
-    <script>
+    <!-- <script>
       window.MathJax = {
         tex: {
         inlineMath: [['$', '$'], ['\\(', '\\)']]
@@ -32,7 +32,9 @@
 
     <script type="text/javascript" id="MathJax-script" async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-    </script>
+    </script> --> -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     
 
