--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
       "SVG": { linebreaks: { automatic: true } },
       });
     </script>
-<!-- 
+
     <!--config MathJax-->
-    <!-- <script>
+    <script>
       window.MathJax = {
         tex: {
         inlineMath: [['$', '$'], ['\\(', '\\)']]
@@ -30,10 +30,12 @@
       };
     </script>
 
-    <script type="text/javascript" id="MathJax-script" async
+    <!-- <script type="text/javascript" id="MathJax-script" async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-    </script> --> -->
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    </script> -->
+
+
+    <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script> -->
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     
