--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,28 +18,21 @@
       });
     </script>
 
-    <!--config MathJax-->
-    <script>
-      window.MathJax = {
-        tex: {
-        inlineMath: [['$', '$'], ['\\(', '\\)']]
-        },
-        skipHtmlTags: [
-          'script', 'noscript', 'style', 'textarea', 'pre'
-        ],
-      };
-    </script>
 
-    <!-- <script type="text/javascript" id="MathJax-script" async
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-    </script> -->
-
-
-    <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script> -->
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-
-    
-
+    <!-- Config MathJax  -->
+	<script>
+		window.MathJax = {
+			tex: {
+			inlineMath: [['$', '$'], ['\\(', '\\)']]
+			},
+			skipHtmlTags: [
+				'script', 'noscript', 'style', 'textarea', 'pre'
+			],
+		};
+	</script>
+	<script type="text/javascript" id="MathJax-script" async
+	  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+	</script>
 
     {% include nav.html %}
 
