--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 			inlineMath: [['$', '$'], ['\\(', '\\)']]
 			},
 			skipHtmlTags: [
-				'script', 'noscript', 'style', 'textarea', 'pre'
+				'script', 'noscript', 'style', 'textarea', 'pre', 'td', 'table'
 			],
 		};
 	</script>
