--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <body>
     
 
-    <!-- mathjax
+    <!-- <!-- mathjax
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config">
       // Make responsive
@@ -20,7 +20,7 @@
 
 
     <!-- Config MathJax  -->
-	<!-- <script>
+	<script>
 		window.MathJax = {
 			tex: {
 			inlineMath: [['$', '$'], ['\\(', '\\)']]
@@ -34,9 +34,7 @@
 	<script type="text/javascript" id="MathJax-script" async
 	  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
 	</script> -->
-  <script type="text/javascript"
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-AMS-MML_HTMLorMML,https://samarth-robo.github.io/blog/assets/js/MathJaxLocal.js">
-  </script>
+
 
 
 
