--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,10 @@
   <!-- Phần head section mình thêm vào để set icon cho browser tab-->
   <head> 
     <link rel="icon" type="image/png" href="../images/404.jpg">
+
+    <!-- For Latex -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    
   </head>
   <body>
     
@@ -20,7 +24,7 @@
 
 
     <!-- Config MathJax  -->
-	<script>
+	<!-- <script>
 		window.MathJax = {
 			tex: {
 			inlineMath: [['$', '$'], ['\\(', '\\)']]
@@ -33,7 +37,7 @@
   
 	<script type="text/javascript" id="MathJax-script" async
 	  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-	</script> -->
+	</script> --> -->
 
 
 
