--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/png" href="../images/404.jpg">
 
     <!-- For Latex -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
-    
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+     -->
   </head>
   <body>
     
@@ -23,21 +23,21 @@
     </script>
 
 
-    <!-- Config MathJax  -->
-	<!-- <script>
+    Config MathJax  -->
+	<script>
 		window.MathJax = {
 			tex: {
 			inlineMath: [['$', '$'], ['\\(', '\\)']]
 			},
 			skipHtmlTags: [
-				'script', 'noscript', 'style', 'textarea', 'pre', 'td', 'table'
+				'script', 'noscript', 'style', 'textarea', 'pre',
 			],
 		};
 	</script>
   
 	<script type="text/javascript" id="MathJax-script" async
 	  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-	</script> --> -->
+	</script>
 
 
 
