--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <!-- Phần head section mình thêm vào để set icon cho browser tab-->
   <head> 
-    <link rel="icon" type="image/png" href="../images/404.jpg">
+    <link rel="icon" type="image/png" href="../images/myavatar.jpg">
 
     <!-- For Latex -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
@@ -11,36 +11,20 @@
   </head>
   <body>
     
-
-    <!-- <!-- mathjax
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script type="text/x-mathjax-config">
-      // Make responsive
-      MathJax.Hub.Config({
-      "HTML-CSS": { linebreaks: { automatic: true } },
-      "SVG": { linebreaks: { automatic: true } },
-      });
+    <script>
+      window.MathJax = {
+        tex: {
+        inlineMath: [['$', '$'], ['\\(', '\\)']]
+        },
+        skipHtmlTags: [
+          'script', 'noscript', 'style', 'textarea', 'pre',
+        ],
+      };
     </script>
-
-
-    Config MathJax  -->
-	<script>
-		window.MathJax = {
-			tex: {
-			inlineMath: [['$', '$'], ['\\(', '\\)']]
-			},
-			skipHtmlTags: [
-				'script', 'noscript', 'style', 'textarea', 'pre',
-			],
-		};
-	</script>
-  
-	<script type="text/javascript" id="MathJax-script" async
-	  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-	</script>
-
-
-
+    
+    <script type="text/javascript" id="MathJax-script" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+    </script>
 
     {% include nav.html %}
 
