--- a/style.scss
+++ b/style.scss
@@ -355,9 +355,9 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
+  font-family: "Roboto", sans-serif; //$helveticaNeue;
   font-weight: 300;
-  font-size: 28px;
+  font-size: 25px;
   letter-spacing: 1px;
 }
 
