--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -18,6 +18,7 @@ $white: #fff;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
+$Roboto: "Roboto", sans-serif;
 
 // Fonts
 $base-font: 'Arial', 'Spoqa Han Sans', 'Source Sans Pro', 'Apple SD Gothic Neo', 'Nanum Barun Gothic', 'Nanum Gothic', 'Verdana', 'Dotum', sans-serif;
