--- a/style.scss
+++ b/style.scss
@@ -355,7 +355,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: "Roboto", sans-serif; //$helveticaNeue;
+  font-family: $Roboto; //$helveticaNeue;
   font-weight: 300;
   font-size: 25px;
   letter-spacing: 1px;
