--- a/style.scss
+++ b/style.scss
@@ -356,7 +356,7 @@ img {
   color: $darkGray;
   cursor: pointer;
   font-family: $Roboto; //$helveticaNeue;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 23px;
   // letter-spacing: 1px; // khoang cach cac tu
 }
