--- a/style.scss
+++ b/style.scss
@@ -355,7 +355,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $Roboto; //$helveticaNeue;
+  font-family: $helveticaNeue; //$helveticaNeue;
   font-weight: 500;
   font-size: 23px;
   // letter-spacing: 1px; // khoang cach cac tu
