--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ body {
   max-width: 1000px;    // tăng độ rộng của bài viết
   padding: 0 10px;
   width: 100%;
-  background-color: #f3f3f3ff;  // thay đổi màu nền
+  // background-color: #f3f3f3ff;  // thay đổi màu nền
 }
 
 h1, h2, h3, h4, h5, h6 {
