--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,8 +20,8 @@ $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 $Roboto: "Roboto", sans-serif;
 
-// Fonts
-$base-font: 'Arial', 'Spoqa Han Sans', 'Source Sans Pro', 'Apple SD Gothic Neo', 'Nanum Barun Gothic', 'Nanum Gothic', 'Verdana', 'Dotum', sans-serif;
+// Fonts -fonts cho nội dung
+$base-font: 'Roboto', 'Arial', 'Spoqa Han Sans', 'Source Sans Pro', 'Apple SD Gothic Neo', 'Nanum Barun Gothic', 'Nanum Gothic', 'Verdana', 'Dotum', sans-serif;
 $code-font: 'JetBrains Mono', 'Menlo', 'Courier New', 'Monaco', 'Spoqa Han Sans';  // tự thêm JetBarins Mono chạy ok
 
 // Font sizes
