--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  font-family: $base-font;
+  font-family: $base-font;    // fonts cho nội dung
   color: $base-color;
   line-height: 1.6;
 }
