--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 1000px;    // tăng độ rộng của bài viết
+  max-width: 900px;    // tăng độ rộng của bài viết
   padding: 0 10px;
   width: 100%;
   // background-color: #f3f3f3ff;  // thay đổi màu nền
@@ -63,7 +63,7 @@ h3 {
 
 h4 {
   font-size: 20px;
-  // color: $base-lighten-color;
+  // color: $base-lighten-color;  // để lại h4 bị nhạt
 }
 
 h6 {
