--- a/style.scss
+++ b/style.scss
@@ -387,7 +387,7 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $cyan;   //$darkGray;  // màu cũ trên laptop
+    color: $darkGray;  // màu cũ trên laptop
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
