--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,12 @@
       };
     </script>
     
-    <script type="text/javascript" id="MathJax-script" async
+    <!-- <script type="text/javascript" id="MathJax-script" async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-    </script>
+    </script> -->
+
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     {% include nav.html %}
 
